Fixed image alignment to 0 margin

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@
 .header__image {
   max-width: 636px;
   height: auto;
-  align-self: center;
+  margin: auto 0;
 }
 
 .header__footer {
